--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      font-family: Arial, sans-serif;
+      font-family: "Segoe UI", Arial, sans-serif;
       background: linear-gradient(135deg, #ff9a9e, #fad0c4);
       overflow: hidden;
       text-align: center;
@@ -19,12 +19,18 @@
 
     h1 {
       color: #b30059;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
     }
 
     h2 {
       color: #800040;
-      margin-bottom: 30px;
+      margin-bottom: 15px;
+    }
+
+    #countdown {
+      font-size: 18px;
+      color: #5a0030;
+      margin-bottom: 25px;
     }
 
     .buttons {
@@ -37,8 +43,9 @@
       padding: 14px 28px;
       font-size: 18px;
       border: none;
-      border-radius: 10px;
+      border-radius: 12px;
       cursor: pointer;
+      transition: transform 0.2s;
     }
 
     #yes {
@@ -56,9 +63,8 @@
     /* Floating hearts */
     .heart {
       position: absolute;
-      color: rgba(255, 0, 100, 0.7);
-      font-size: 20px;
       animation: float 6s linear infinite;
+      opacity: 0.8;
     }
 
     @keyframes float {
@@ -77,13 +83,21 @@
 
   <h1>Hey Baby 💕</h1>
   <h2>Will you be my Valentine? 🌹</h2>
+  <div id="countdown"></div>
 
   <div class="buttons">
     <button id="yes" onclick="yesClicked()">YES 💖</button>
     <button id="no" onmouseover="moveNo()">NO 🙃</button>
   </div>
 
+  <!-- Background Music -->
+  <audio autoplay loop>
+    <source src="https://cdn.pixabay.com/audio/2022/02/23/audio_2c1b1a9c44.mp3" type="audio/mpeg">
+  </audio>
+
   <script>
+    let noScale = 1;
+
     function moveNo() {
       const noBtn = document.getElementById("no");
       const maxX = 260;
@@ -92,31 +106,56 @@
       const x = Math.random() * maxX;
       const y = Math.random() * maxY;
 
+      noScale -= 0.1;
+      if (noScale < 0.4) noScale = 0.4;
+
       noBtn.style.left = x + "px";
       noBtn.style.top = y + "px";
+      noBtn.style.transform = `scale(${noScale})`;
     }
 
     function yesClicked() {
       document.body.innerHTML = `
         <h1>Yayyy Baby 💘🥰</h1>
-        <h2>You just made me the happiest person ❤️</h2>
-        <p style="font-size:22px;">Can’t wait to celebrate Valentine’s with you 🌹✨</p>
+        <h2>I knew you’d say YES ❤️</h2>
+        <p style="font-size:22px; max-width:600px;">
+          You just made my heart very happy 💖<br>
+          Can’t wait to celebrate Valentine’s Day with you 🌹✨
+        </p>
       `;
     }
 
-    // Create floating hearts
+    // Floating hearts generator
     setInterval(() => {
       const heart = document.createElement("div");
       heart.className = "heart";
       heart.innerHTML = "💖";
       heart.style.left = Math.random() * 100 + "vw";
-      heart.style.fontSize = (16 + Math.random() * 20) + "px";
+      heart.style.fontSize = (14 + Math.random() * 26) + "px";
       document.body.appendChild(heart);
 
-      setTimeout(() => {
-        heart.remove();
-      }, 6000);
-    }, 400);
+      setTimeout(() => heart.remove(), 6000);
+    }, 350);
+
+    // Countdown to Valentine's Day
+    function updateCountdown() {
+      const valentine = new Date(new Date().getFullYear(), 1, 14);
+      const now = new Date();
+      if (now > valentine) {
+        valentine.setFullYear(valentine.getFullYear() + 1);
+      }
+
+      const diff = valentine - now;
+      const days = Math.floor(diff / (1000 * 60 * 60 * 24));
+      const hours = Math.floor((diff / (1000 * 60 * 60)) % 24);
+      const minutes = Math.floor((diff / (1000 * 60)) % 60);
+
+      document.getElementById("countdown").innerHTML =
+        `⏳ Valentine’s Day in ${days} days ${hours} hrs ${minutes} mins 💕`;
+    }
+
+    updateCountdown();
+    setInterval(updateCountdown, 60000);
   </script>
 
 </body>
